--- a/inventory_management_system/inventory/templates/inventory/admin_dashboard.html
+++ b/inventory_management_system/inventory/templates/inventory/admin_dashboard.html
@@ -19,7 +19,7 @@
 
         <ul class="list-unstyled mt-4">
             <li class="mb-3">
-                <a href="{% url 'add_department_user' %}" class="btn btn-primary btn-lg w-50 shadow-sm">
+                <a href="{% url 'inventory:add_department_user' %}" class="btn btn-primary btn-lg w-50 shadow-sm">
                     <i class="fas fa-user-plus me-2"></i> Add Department User
                 </a>
             </li>
@@ -28,9 +28,19 @@
                     <i class="fas fa-chart-line me-2"></i> View Inventory Reports
                 </a>
             </li>
+            <li class="mb-3">
+                <a href="{% url 'inventory:add_item' %}" class="btn btn-warning btn-lg w-50 shadow-sm text-dark">
+                    <i class="fas fa-plus-circle me-2"></i> Add New Item
+                </a>
+            </li>
+            <li class="mb-3">
+                <a href="{% url 'inventory:inventory_list' %}" class="btn btn-info btn-lg w-50 shadow-sm text-dark">
+                    <i class="fas fa-boxes me-2"></i> View Stock
+                </a>
+            </li>
             <li>
-                <a href="#" class="btn btn-warning btn-lg w-50 shadow-sm text-dark">
-                    <i class="fas fa-boxes me-2"></i> Manage Stock
+                <a href="{% url 'inventory:cdsr_allocation_list' %}" class="btn btn-info btn-lg w-50 shadow-sm text-dark">
+                    <i class="fas fa-boxes me-2"></i> Allocate Stock
                 </a>
             </li>
         </ul>
