--- a/inventory_management_system/templates/base.html
+++ b/inventory_management_system/templates/base.html
@@ -12,9 +12,9 @@
 <body>
 
     <nav>
-        <a href="{% url 'login' %}">Login</a> | 
+        <a href="{% url 'accounts:login' %}">Login</a> | 
         {% if user.is_authenticated %}
-            <a href="{% url 'logout' %}">Logout</a>
+            <a href="{% url 'accounts:logout' %}">Logout</a>
         {% endif %}
     </nav>
 
