--- a/inventory_management_system/accounts/templates/accounts/login.html
+++ b/inventory_management_system/accounts/templates/accounts/login.html
@@ -32,7 +32,7 @@
     .card {
         border-radius: 10px;
         background: #fff;
-        margin-top:5px;
+        margin-top:px;
     }
     h2 {
         font-weight: 600;
