--- a/inventory_management_system/templates/base.html
+++ b/inventory_management_system/templates/base.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 
-    <nav>
+    {% comment %} <nav>
         <a href="{% url 'login' %}">Login</a> | 
         {% if user.is_authenticated %}
             <a href="{% url 'logout' %}">Logout</a>
         {% endif %}
-    </nav>
+    </nav> {% endcomment %}
 
     <div>
         {% if messages %}
