--- a/inventory_management_system/inventory/templates/inventory/inventory_list.html
+++ b/inventory_management_system/inventory/templates/inventory/inventory_list.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2 class="text-center">Inventory List</h2>
+    <h2 class="text-center text-success fw-bold ">Inventory List</h2>
     <div class="card shadow p-4">
 
         <!-- ✅ Filter Form -->
